--- a/gb/21/5/19/n12961300.md
+++ b/gb/21/5/19/n12961300.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wtnrng3147/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【探索时分】太平洋定海神针 美救台的第七舰队</h2>
-<a href="https://d1nu9fv1hhdo43.cloudfront.net/H3lUvJjyw"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d3uam2jhpjrvu5.cloudfront.net/Y8wUvJjyj"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
 	<p>1950年6月28日台湾基隆港外，一艘军舰缓缓驶来，你仔细一看，舰首两门两联装的127毫米火炮，舷号DD-745，这不是美国驱逐舰“布拉什号”（USS Brush）吗？美国驱逐舰为什么要到台湾来？</p>
-<p>就在三天前，金日成大手一挥，朝鲜进犯韩国，朝鲜战争全面爆发了。6月27日美国总统杜鲁门下令，<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E7%AC%AC%E4%B8%83%E8%88%B0%E9%98%9F.md#1">第七舰队</a>进驻台湾海峡。</p>
-<p><center><a src=""></a><a href="https://d1nu9fv1hhdo43.cloudfront.net/H3lUvJjyw"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/f93098d1-6e53-4149-9f7c-70167156087b?r=16x9&amp;d=613" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a><center></center></center></p>
-<h3>1950年开始 <ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E7%AC%AC%E4%B8%83%E8%88%B0%E9%98%9F.md#1">第七舰队</a>台海巡逻29年</h3>
+<p>就在三天前，金日成大手一挥，朝鲜进犯韩国，朝鲜战争全面爆发了。6月27日美国总统杜鲁门下令，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%AC%AC%E4%B8%83%E8%88%B0%E9%98%9F.md#1">第七舰队</a>进驻台湾海峡。</p>
+<p><center><a src=""></a><a href="https://d3uam2jhpjrvu5.cloudfront.net/Y8wUvJjyj"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/f93098d1-6e53-4149-9f7c-70167156087b?r=16x9&amp;d=613" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a><center></center></center></p>
+<h3>1950年开始 <ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%AC%AC%E4%B8%83%E8%88%B0%E9%98%9F.md#1">第七舰队</a>台海巡逻29年</h3>
 <p>我们这里要介绍一下背景啊，在国共内战时期，美国的杜鲁门政府其实一直被共产党欺骗，对共产党抱有好感。当时共产党对内对外宣称，要带来“民主自由”等等。所以1950年1月份，在共产党控制了大陆的情况下，美国国务卿艾奇逊和总统杜鲁门在多个场合公开表示，如果中共进攻台湾，美国不会干涉。</p>
 <p>就在1950年的5月，中共刚刚攻占了海南，这个时候台湾自然就成了下一个目标。然而，仅仅一个月之后，朝鲜战争爆发。</p>
 <p>杜鲁门公开发表演讲说，对韩国的攻击已无可怀疑地说明，共产主义已不限于使用颠覆手段来征服独立国家，现在要使用武装的侵犯与战争。在这种情况下，共产党部队占领台湾，将直接威胁太平洋地区的安全，及在该地区执行合法与必要职务的美国部队。</p>
@@ -18,8 +18,8 @@
 <p>这是第七舰队第一次出手，时间到了1996年，台湾迎来首次总统大选。中共决定采取以武力威胁1996年中华民国总统选举，多次向台湾外海发射导弹，并且在福建沿海集结部队，进行大规模登陆演习。中共已作好准备，对台湾实施战术打击。</p>
 <p>关键时刻，总统克林顿命令第七舰队，到台湾海域进行巡逻，“独立号”航母从日本出发，而“尼米兹号”航母打击群从波斯湾出发，在台海汇合，对中共形成威慑。最终，李登辉当选中华民国首位民选总统，而中共也再没有任何威胁行为。</p>
 <h3>第七舰队总部位于日本横须贺海军基地</h3>
-<p>我们今天就借这个机会好好聊一下美国第七舰队。第七舰队的总部目前位于日本的横须贺海军基地，其实在二战结束之初，第七舰队的总部一度设在中国青岛。第七舰队常年保持一艘航母，从“独立号”到“小鹰号”、“乔治·华盛顿号”，到目前的核动力航母“<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E9%87%8C%E6%A0%B9%E5%8F%B7.md#1">里根号</a>”。</p>
-<p>第七舰队大约拥有50至60艘军舰、350架战机，舰队满员编制6万人。必要时可以从太平洋舰队第三舰队抽调军舰补充。现在的旗舰是两栖指挥舰“蓝岭号”、核动力航空母舰“<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E9%87%8C%E6%A0%B9%E5%8F%B7.md#1">里根号</a>”，3艘导弹巡洋舰、7艘导弹驱逐舰、5至6艘攻击型潜艇，以及5至8艘登陆舰，还有若干扫雷舰和后勤保障船。</p>
+<p>我们今天就借这个机会好好聊一下美国第七舰队。第七舰队的总部目前位于日本的横须贺海军基地，其实在二战结束之初，第七舰队的总部一度设在中国青岛。第七舰队常年保持一艘航母，从“独立号”到“小鹰号”、“乔治·华盛顿号”，到目前的核动力航母“<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%87%8C%E6%A0%B9%E5%8F%B7.md#1">里根号</a>”。</p>
+<p>第七舰队大约拥有50至60艘军舰、350架战机，舰队满员编制6万人。必要时可以从太平洋舰队第三舰队抽调军舰补充。现在的旗舰是两栖指挥舰“蓝岭号”、核动力航空母舰“<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%87%8C%E6%A0%B9%E5%8F%B7.md#1">里根号</a>”，3艘导弹巡洋舰、7艘导弹驱逐舰、5至6艘攻击型潜艇，以及5至8艘登陆舰，还有若干扫雷舰和后勤保障船。</p>
 <p><strong>“里根号”航母</strong></p>
 <p>我们先来看看“里根号”航母。“里根号”舰长332.85米，飞行甲板宽78.34米，整个甲板面积达到1.8万平方米，排水量为9.7万吨，水线以上有20层楼高，整船竖起来高度相当于纽约帝国大厦。能够搭载战机85架，有4个飞行中队的48架F/A-18超级大黄蜂战斗机、少量E-2预警机、还有EA-18G电子战飞机、C-2运输机和直升机。装备两座核反应堆发动机，可以让“里根号”连续运行20年无需添加燃料。航母容纳乘员6000人，储备的食物则可以让6000人吃3个月。</p>
 <p>除了“里根号”航母，第七舰队还有“美利坚号”两栖攻击舰。“美利坚级”两栖攻击舰是美国最新型的登陆战舰，可满载新型的MV-22鱼鹰直升机，快速投放陆战队到敌方防线之后，配合两栖登陆；还可以满载F-35B隐形战机，变身轻型航母，支援海战。</p>
@@ -32,13 +32,13 @@
 <p>与“提康德罗加级”巡洋舰一样，“伯克级”驱逐舰也具备全面的反潜、反舰、防空、反导弹武器系统，包括标准系列防空导弹、海麻雀导弹、方阵快炮；反舰导弹有鱼叉导弹和标准六型导弹；也配备战斧巡航导弹进行对地打击。同时，也配有反潜拖曳声纳和反潜直升机、反潜火箭和鱼雷，以及电子战系统和诱饵发射系统。</p>
 <p>“伯克级”驱逐舰长度比“提康德罗加级”巡洋舰短，无法配置总计122个发射管，因此早期型号配备90个垂直导弹发射管，后期型号配备96个导弹发射管。“伯克级”驱逐舰的主要防空型导弹，是标准二型中程导弹，射程74公里至167公里，最大高度24,400米，最高速度3.5马赫。可攻击敌方战机，也可用于中距离导弹拦截。</p>
 <p>标准三型导弹（SM-3）专门拦截敌方的弹道导弹。基本型导弹射程900公里，最高速度8.8马赫（3公里/秒）。IIA/B改进型，射程2,500公里，最高速度13.2马赫（4.5公里/秒）。</p>
-<p>标准六型导弹（SM-6）是另一款新的多功能远程导弹（B19 "></a><a href="https://d1nu9fv1hhdo43.cloudfront.net/H3lUvJjyw"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/watch?v=cylzETFTWAI），可用于防空，也可用于拦截海上和陆地发射的高空或掠海反舰导弹，还可用于拦截末端飞行的弹道导弹。导弹基本射程240公里，最远可达460公里，导弹飞行上限34,000米，最高速度3.5马赫（1.2公里/秒）。标准六型导弹还可以用作高速反舰导弹，攻击敌方舰船。</p>
+<p>标准六型导弹（SM-6）是另一款新的多功能远程导弹（B19 "></a><a href="https://d3uam2jhpjrvu5.cloudfront.net/Y8wUvJjyj"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/watch?v=cylzETFTWAI），可用于防空，也可用于拦截海上和陆地发射的高空或掠海反舰导弹，还可用于拦截末端飞行的弹道导弹。导弹基本射程240公里，最远可达460公里，导弹飞行上限34,000米，最高速度3.5马赫（1.2公里/秒）。标准六型导弹还可以用作高速反舰导弹，攻击敌方舰船。</p>
 <p>海麻雀导弹（ESSM）用于中短距离拦截敌方导弹，射程超过50公里，最高速度4马赫。除了大型的水面舰船以外，在关岛，第七舰队还有三艘“洛杉矶级”核动力攻击潜艇，除了大量的鱼雷，每一艘都能携带12枚战斧巡航导弹。</p>
 <p>在1950年和1996年，第七舰队两次开往台湾海峡，阻止了可能的台海战争，在未来，如果台海地区出现冲突，第七舰队将是美国最先部署到台海地区的。在未来战争中，第七舰队又将扮演什么样的角色呢？让我们拭目以待。</p>
 <p>值得一提的是，开头提到的第一艘来台湾海峡执行巡逻任务的“布拉什号”驱逐舰，日后被卖给了中华民国，成为了“襄阳号”驱逐舰，1984年退役。</p>
-<p>【<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%e6%8e%a2%e7%b4%a2%e6%99%82%e5%88%86.md#1">探索时分</a>】节目组制作<br />
-欢迎订阅Youmaker频道?<ahref=""></a><a href="https://d1nu9fv1hhdo43.cloudfront.net/H3lUvJjyw"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/tansuo%E2%80%8B">"></a><a href="https://d1nu9fv1hhdo43.cloudfront.net/H3lUvJjyw"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/tansuo?</a><br />
-订阅频道YouTube频道?<ahref=""></a><a href="https://d1nu9fv1hhdo43.cloudfront.net/H3lUvJjyw"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCivjPE-4XnyqBBuxhXshSAw">"></a><a href="https://d1nu9fv1hhdo43.cloudfront.net/H3lUvJjyw"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCivjPE-4XnyqBBuxhXshSAw</a><br />
+<p>【<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%e6%8e%a2%e7%b4%a2%e6%99%82%e5%88%86.md#1">探索时分</a>】节目组制作<br />
+欢迎订阅Youmaker频道?<ahref=""></a><a href="https://d3uam2jhpjrvu5.cloudfront.net/Y8wUvJjyj"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/tansuo%E2%80%8B">"></a><a href="https://d3uam2jhpjrvu5.cloudfront.net/Y8wUvJjyj"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/tansuo?</a><br />
+订阅频道YouTube频道?<ahref=""></a><a href="https://d3uam2jhpjrvu5.cloudfront.net/Y8wUvJjyj"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCivjPE-4XnyqBBuxhXshSAw">"></a><a href="https://d3uam2jhpjrvu5.cloudfront.net/Y8wUvJjyj"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCivjPE-4XnyqBBuxhXshSAw</a><br />
 订阅探索时分Telegram群组?<ahref="https://t.me/jiemishifenchannel">https://t.me/jiemishifenchannel</a></p>
 <p>责任编辑：李昊#</p>
 	
@@ -46,41 +46,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/4/10/n12871679.md#1">【探索时分】美军隐形航母杀手AGM-158C</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/4/14/n12880456.md#1">【探索时分】神不知鬼不觉 史上最成功空袭</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/4/19/n12890784.md#1">【探索时分】二战德国七大名将绰号</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/4/21/n12895852.md#1">【探索时分】蝙蝠侠战舰：朱姆沃尔特号驱逐舰</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/4/10/n12871679.md#1">【探索时分】美军隐形航母杀手AGM-158C</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/4/14/n12880456.md#1">【探索时分】神不知鬼不觉 史上最成功空袭</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/4/19/n12890784.md#1">【探索时分】二战德国七大名将绰号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/4/21/n12895852.md#1">【探索时分】蝙蝠侠战舰：朱姆沃尔特号驱逐舰</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066862.md#1" target="_blank">智效民：著名物理学家饶毓泰的悲剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9090867.md#1" target="_blank">从制鞋工到超级业务员的修炼人生</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13574787.md#1">古代修炼文化留给人的启示</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605976.md#1">【秦鹏直播】铁链女一声惊人 说明不是小花梅</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605215.md#1">【十字路口】俄乌战火炙热 中共会出兵夺台吗？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605539.md#1">【财商天下】俄入侵乌克兰 北京被拉下水？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13600282.md#1">【更新】俄宣战 乌克兰多城遭袭 国际回应</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602565.md#1">【微视频】普京：共产党惹的祸 乌克兰也这么想</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13600024.md#1">香港娱乐圈爆发疫情 逾10名艺人确诊染疫</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13599881.md#1">容祖儿卖香港一处豪宅套现 亏损逾百万港币</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602257.md#1">早期胃癌难发现 八个症状需警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740132.md#1">【财商天下】核检日赚一亿 钱进了谁的口袋？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740247.md#1">【新闻看点】上海被爆加强封控 居委弄虚作假</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736847.md#1">9大体质快看你是哪种？教你调回最佳体质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/19/n12961300.htm">【探索时分】太平洋定海神针 美救台的第七舰队</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/19/n12961300.htm">【探索时分】太平洋定海神针 美救台的第七舰队</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wtnrng3147/djy/blob/master/gb/21/5/19/n12961300.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12961300.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
